order text added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Satisfy&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
@@ -24,6 +27,16 @@
                 <a href="#" class="login-link nav-link">login</a>
                 <a href="#" class="login-link nav-link">register</a>
             </div>
+            
+        </div>
+        <div class="order-container flex-colum">
+            <h1>
+                 <span class="order-1 order"> grilid </span>
+                 <span class="order-2 order"> chesse </span> 
+                 <span class="order-3 order"> burger </span> 
+            </h1>
+            <p class="order-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, reprehenderit, odio, iure</p>
+            <a href="#" class="order-link">order now</a>
         </div>
     </header>
     
