our food section created

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <span class="logo-name">foodBurg</span>
             </div>
             <div class="link-container">
-               <a href="#" class="nav-link">home</a>
-               <a href="#" class="nav-link">our food</a>
+               <a href="index.html" class="nav-link">home</a>
+               <a href="#ourfood" class="nav-link">our food</a>
                <a href="#" class="nav-link">about</a>
                <a href="#" class="nav-link">food brand</a>
             </div>
@@ -27,9 +27,8 @@
                 <a href="#" class="login-link nav-link">login</a>
                 <a href="#" class="login-link nav-link">register</a>
             </div>
-            
         </div>
-        <div class="order-container flex-colum">
+        <div class="order-container">
             <h1>
                  <span class="order-1 order"> grilid </span>
                  <span class="order-2 order"> chesse </span> 
@@ -39,6 +38,39 @@
             <a href="#" class="order-link">order now</a>
         </div>
     </header>
+    <div class="ourFood-container" id="ourfood">
+        <h1 class="ourFood-header">our food</h1>
+        <p class="ourFood-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Similique sequi provident itaque, voluptatum soluta
+             libero veniam recusandae unde ipsum
+        </p>
+        <div class="menu-container flex-row">
+            <div class="menu flex-colum">
+                <img src="resources/css/img/menu-1.jpg" alt="menu" class="menu-image">
+                <p class="menu-name">chicken fries</p>
+                <p class="menu-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo, tempore.
+                </p>
+                <p class="menu-cost">$250.00</p>
+            </div>
+            <div class="menu flex-colum">
+                <img src="resources/css/img/menu-2.jpg" alt="menu" class="menu-image">
+                <p class="menu-name">chicken rich</p>
+                <p class="menu-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo, tempore.
+                </p>
+                <p class="menu-cost">$250.00</p>
+            </div>
+            <div class="menu flex-colum">
+                <img src="resources/css/img/menu-3.jpg" alt="menu" class="menu-image">
+                <p class="menu-name">zinger burgur</p>
+                <p class="menu-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo, tempore.
+                </p>
+                <p class="menu-cost">$250.00</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
