about-us created

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0cf8b4dc48.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Satisfy&display=swap" rel="stylesheet">
-    <title>Home</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Satisfy&display=swap" rel="stylesheet">
+<title>Home</title>
 </head>
 <body>
     <header id="header">
@@ -70,6 +71,16 @@
                 <p class="menu-cost">$250.00</p>
             </div>
         </div>
+    </div>
+    <div class="about-container flex-row">
+        <div class="about-title">
+
+        <p class="about-heading">about food cloud group</p>
+        <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet veritatis at perspiciatis enim autem accusantium obcaecati laboriosam quo eius? Tenetur, reiciendis! Aut consequuntur officiis, commodi incidunt accusantium consequatur aliquam nam veritatis voluptates repellendus praesentium natus, voluptas sit accusamus eveniet dolore culpa similique placeat quo perferendis omnis laudantium doloremque non? Eligendi.</p>
+        <a href="#" class="about-link">read more</a>
+
+        </div>
+        <img src="resources/css/img/about-logo.png" alt="about-logo" class="about-icon">
     </div>
     
 </body>
